--- a/res/layout/l_dirty_compact_post.xml
+++ b/res/layout/l_dirty_compact_post.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <TextView
+    <com.shaubert.widget.PatchedTextView
         android:id="@+id/header_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -32,7 +32,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" >
 
-                <TextView
+                <com.shaubert.widget.PatchedTextView
                     android:id="@+id/message"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
                     android:src="@drawable/star_filled" />
             </LinearLayout>
 
-            <TextView
+            <com.shaubert.widget.PatchedTextView
                 android:id="@+id/summary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
