--- a/res/layout/l_dirty_comment.xml
+++ b/res/layout/l_dirty_comment.xml
@@ -13,7 +13,7 @@
         android:background="@drawable/frame_background"
         android:orientation="vertical" >
 
-        <TextView
+        <com.shaubert.widget.PatchedTextView
             android:id="@+id/message"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -30,7 +30,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginRight="8dp"/>
         
-        <TextView
+        <com.shaubert.widget.PatchedTextView
             android:id="@+id/summary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
