--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2,24 +2,37 @@
 <resources>
 
     <string-array name="new_post_formats">
-        <item>У нас %s</item>
-        <item>Ого, %s</item>
-        <item>Кто-то припер еще %s</item>
         <item>Ну сколько можно, опять %s</item>
         <item>Прочитай еще %s, да выпей чаю</item>
         <item>Только между нам, там %s</item>
         <item>Там %s. Мне это понравилось</item>
-        <item>От чего коровы с ума сходят? Кстати, там %s</item>
-        <item>Ну вы послушайте! По-моему, у вас высшее образование. Там %s</item>
+        <item>От чего коровы с ума сходят? Лучше не читайте %s</item>
         <item>Я посмотрел информацию: %s</item>
         <item>Сейчас нужно смотреть в будущее, там %s</item>
-        <item>Должна же быть дурь в голове. И она периодически появляется. Там %s</item>
-        <item>Ну что, показать вам еще эксклюзив? Там %s</item>        
+        <item>Ну что, показать вам еще эксклюзив? Там %s</item>    
+        <item>%s, но я не делаю из этого фетиша</item>
+        <item>Борьба света и тьмы принесла нам %s</item>
+        <item>Слава Богу, что перелистнули эту страницу. За ней %s</item>
+        <item>В этом гадюшнике %s</item>
+        <item>Все симпатии или антипатии должны отойти на второй план, ведь там %s</item>
+        <item>В стране заключен пакт: свобода в обмен на %s</item>
+        <item>Говорят, есть %s</item>
+        <item>Фермеры с оружием, там %s</item>
+        <item>Мужики, кто-нибудь из вас знает, что там %s?</item>
+        <item>Я в шесть часов заканчивал работу, забирал дочь из садика и шел с ней домой читать %s.</item>
+        <item>Четыре первых года Путин вообще ничего не делал, только читал %s</item>
+        <item>Мы хотим, чтобы люди жили долго и не читали %s.</item>
+        <item>Лицам пожилого возраста надо уменьшить свою активность и не читать %s</item>
+        <item>Лучше сидеть дома, никуда не выходить и читать %s.</item>
+        <item>Человек, который работает, ему некогда читать %s</item>
+        <item>Не ищите приключений на голову и желудочно-кишечный тракт, забудьте про %s</item>
+        <item>Советую снизить трудовую активность и выделить несколько часов на отдых! Там %s</item>
     </string-array>
     
-    <string-array name="error_messages">
-    	<item>Не кричите, не надо... Да, что-то пошло не так</item>
+  <string-array name="error_messages">
+  	<item>Не кричите, не надо... Да, что-то пошло не так</item>
 		<item>У нас проблемы. Валерьяночки, может, вам?</item>
+		<item>Бывает, зато дети могут спокойно в школу ходить.</item>
 		<item>Тут проблемы, но если это кого-то и трогает, то нам на это наплевать</item>
 		<item>Только что произошло вопиющее нарушение норм международного права</item>
 		<item>Обманули самым примитивным образом</item>
@@ -27,7 +40,17 @@
 		<item>Скажу честно, в том, что сейчас произошло, виноваты вы</item>
 		<item>Раздался бульк и пошли волны</item>
 		<item>У бизнеса нет оправдания тому, что сейчас случилось</item>
-		<item>У нас проблемы. Вижу, как борьба света и тьмы проходит по вам</item>
+		<item>Ты в сказки веришь, какое у тебя желание?</item>
+		<item>Это кризис человеческой личности, нравственного чувства, потери ценностей</item>
+		<item>Никаких правонарушений я не совершал</item>
+		<item>Вы поставили себя в такую, мягко говоря, сложно-комическую ситуацию.</item>
+		<item>У нас понимание одно — возмущение!</item>
+		<item>Подождем, когда пройдут все события, затем заслушаем министра.</item>
+		<item>Xочу напомнить, большую роль в этом сыграл лично Владимир Путин.</item>
+		<item>Всё это говорит о том, что Россия возрождается.</item>
+		<item>Чего вам неймется?</item>
+		<item>Разве можно реагировать на такие вещи? Это — хамство отчаяния.</item>
+		<item>Свою плоть надо истязать.</item>
 	</string-array>
 
     <string-array name="font_size_labes">
