--- a/res/layout/l_dirty_base_activity.xml
+++ b/res/layout/l_dirty_base_activity.xml
@@ -15,7 +15,8 @@
         <ImageView
             android:id="@+id/gertruda"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:scaleType="centerInside"/>
 
     </LinearLayout>
 
