--- a/res/xml/old_prefs.xml
+++ b/res/xml/old_prefs.xml
@@ -3,7 +3,14 @@
 
     <PreferenceCategory android:title="@string/main_setting_header_title" >
         <CheckBoxPreference
-            android:defaultValue="true"
+            android:defaultValue="false"
+            android:key="@string/main_page_show_all_key"
+            android:summaryOn="@string/main_page_show_all_descr_on"
+            android:summaryOff="@string/main_page_show_all_descr_off"
+            android:title="@string/main_page_show_all_title" />
+
+        <CheckBoxPreference
+            android:defaultValue="false"
             android:key="@string/petr_pref_key"
             android:summaryOff="@string/petr_turned_off"
             android:summaryOn="@string/petr_turned_on"
