--- a/res/layout/l_blogs_list.xml
+++ b/res/layout/l_blogs_list.xml
@@ -18,6 +18,7 @@
         android:divider="@null"
         android:listSelector="@drawable/listview_transparent_selector"
         android:paddingLeft="8dp"
-        android:paddingRight="8dp" />
+        android:paddingRight="8dp"
+        android:scrollbarStyle="outsideOverlay"/>
 
 </LinearLayout>
