--- a/res/layout/l_dirty_blog_info.xml
+++ b/res/layout/l_dirty_blog_info.xml
@@ -1,62 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/frame_body"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/picture_frame" >
+    android:paddingLeft="@dimen/frame_margin_left"
+    android:paddingTop="@dimen/frame_margin_top"
+    android:paddingRight="@dimen/frame_margin_right"
+    android:paddingBottom="@dimen/frame_margin_bottom"
+    android:background="@drawable/frame_background"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/frame_body"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/frame_background"
-        android:orientation="vertical" >
+        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="8dp"
-                android:layout_weight="1"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Хочу все знать!" />
-
-            <ImageView
-                android:id="@+id/favorite_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:focusable="false"
-                android:paddingBottom="8dp"
-                android:paddingLeft="4dp"
-                android:paddingRight="8dp"
-                android:paddingTop="12dp"
-                android:scaleType="center"
-                android:src="@drawable/star_filled" />
-        </LinearLayout>
-
-        <com.shaubert.widget.PatchedTextView
-            android:id="@+id/description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:text="Всё о науке и технологиях — интересные факты, новые открытия, посты–лекции, неожиданные вопросы и веселые байки. Спрашивали? Отвечаем." />
-        
         <TextView
-            android:id="@+id/summary"
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Хочу все знать!"/>
+
+        <ImageView
+            android:id="@+id/favorite_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="12sp"
-            android:text="science.d3.ru, 1578 подписчиков" />
+            android:focusable="false"
+            android:paddingBottom="8dp"
+            android:paddingLeft="4dp"
+            android:paddingRight="8dp"
+            android:paddingTop="12dp"
+            android:scaleType="center"
+            android:src="@drawable/star_filled"/>
     </LinearLayout>
 
-</FrameLayout>
+    <com.shaubert.widget.PatchedTextView
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="Всё о науке и технологиях — интересные факты, новые открытия, посты–лекции, неожиданные вопросы и веселые байки. Спрашивали? Отвечаем."/>
+
+    <TextView
+        android:id="@+id/summary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="12sp"
+        android:text="science.d3.ru, 1578 подписчиков"/>
+</LinearLayout>
