--- a/res/layout/l_dirty_compact_post.xml
+++ b/res/layout/l_dirty_compact_post.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <com.shaubert.widget.PatchedTextView
         android:id="@+id/header_text"
@@ -16,54 +16,65 @@
         android:ellipsize="end"
         android:text="@string/yesterday"/>
 
-    <FrameLayout
+    <RelativeLayout
+        android:id="@+id/frame_body"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/picture_frame" >
+        android:background="@drawable/frame_background"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/unread_mark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/frame_margin_right"
+            android:layout_marginTop="@dimen/frame_margin_top"
+            android:src="@drawable/unread_mark"/>
 
         <LinearLayout
-            android:id="@+id/frame_body"
+            android:id="@+id/frame_message_box"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/frame_background"
-            android:orientation="vertical" >
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
-
-                <com.shaubert.widget.PatchedTextView
-                    android:id="@+id/message"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="8dp"
-                    android:layout_weight="1"
-                    android:ellipsize="end"
-                    android:maxLines="5" />
-
-                <ImageView
-                    android:id="@+id/favorite_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:focusable="false"
-                    android:paddingBottom="8dp"
-                    android:paddingLeft="4dp"
-                    android:paddingRight="8dp"
-                    android:paddingTop="12dp"
-                    android:scaleType="center"
-                    android:src="@drawable/star_filled" />
-            </LinearLayout>
+            android:layout_marginRight="@dimen/frame_margin_right"
+            android:layout_marginLeft="@dimen/frame_margin_left"
+            android:layout_marginTop="@dimen/frame_margin_top">
 
             <com.shaubert.widget.PatchedTextView
-                android:id="@+id/summary"
+                android:id="@+id/message"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:maxLines="5"/>
+
+            <ImageView
+                android:id="@+id/favorite_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="10dp" />
+                android:focusable="false"
+                android:paddingBottom="8dp"
+                android:paddingLeft="4dp"
+                android:paddingRight="8dp"
+                android:paddingTop="12dp"
+                android:scaleType="center"
+                android:src="@drawable/star_filled"/>
         </LinearLayout>
-    </FrameLayout>
+
+        <com.shaubert.widget.PatchedTextView
+            android:id="@+id/summary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/frame_message_box"
+            android:layout_marginRight="@dimen/frame_margin_right"
+            android:layout_marginLeft="@dimen/frame_margin_left"
+            android:layout_marginBottom="@dimen/frame_margin_bottom"
+            android:paddingBottom="10dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="10dp"/>
+    </RelativeLayout>
 </LinearLayout>
