--- a/res/layout/l_posts_list.xml
+++ b/res/layout/l_posts_list.xml
@@ -19,10 +19,11 @@
 	        android:layout_width="fill_parent"
 	        android:layout_height="fill_parent"
 	        android:paddingLeft="8dp"
-	    	android:paddingRight="8dp"
+	    	android:paddingRight="14dp"
 	        android:cacheColorHint="#0000"
 	        android:divider="@null"
-	        android:listSelector="@drawable/listview_transparent_selector"/>
+	        android:listSelector="@drawable/listview_transparent_selector"
+            android:scrollbars="none"/>
 	</com.shaubert.util.FasterScrollerView>
 	
 </LinearLayout>
