--- a/res/values-v11/themes.xml
+++ b/res/values-v11/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="DirtyTheme" parent="@android:style/Theme.Holo.Light">
+    <style name="System" parent="@android:style/Theme.Holo.Light">
     </style>
     
 </resources>
