fixed image paddings

--- a/res/layout/l_dirty_comment.xml
+++ b/res/layout/l_dirty_comment.xml
@@ -16,9 +16,13 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="8dp"/>
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"/>
 
     <RelativeLayout
+        android:id="@+id/image_box"
+        android:layout_marginTop="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
@@ -43,9 +47,7 @@
         android:id="@+id/summary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_margin="8dp"
         android:textColor="@android:color/darker_gray"
         android:textSize="10dp"/>
 
