--- a/res/layout/l_posts_list.xml
+++ b/res/layout/l_posts_list.xml
@@ -1,29 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.shaubert.widget.FasterScrollerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fastscroll"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:weightSum="1" >
+    android:layout_height="fill_parent">
 
-    <TextView
-        android:layout_width="0dp"
+    <ListView
+        android:id="@+id/posts_list"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="0.08" />
-
-    <com.shaubert.util.FasterScrollerView
-    	android:id="@+id/fastscroll"
-        android:layout_width="0dp"
-        android:layout_height="fill_parent"
-        android:layout_weight="0.92">
-	    <ListView
-	        android:id="@+id/posts_list"
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent"
-	        android:paddingLeft="8dp"
-	    	android:paddingRight="14dp"
-	        android:cacheColorHint="#0000"
-	        android:divider="@null"
-	        android:listSelector="@drawable/listview_transparent_selector"
-            android:scrollbars="none"/>
-	</com.shaubert.util.FasterScrollerView>
-	
-</LinearLayout>
+        android:paddingLeft="8dp"
+        android:paddingRight="14dp"
+        android:cacheColorHint="#0000"
+        android:divider="@null"
+        android:listSelector="@drawable/listview_transparent_selector"
+        android:scrollbars="none"/>
+</com.shaubert.widget.FasterScrollerView>
