--- a/res/layout/l_blogs_list.xml
+++ b/res/layout/l_blogs_list.xml
@@ -1,24 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/blogs_list"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:weightSum="1" >
-
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="fill_parent"
-        android:layout_weight="0.08" />
-
-    <ListView
-        android:id="@+id/blogs_list"
-        android:layout_width="0dp"
-        android:layout_height="fill_parent"
-        android:layout_weight="0.92"
-        android:cacheColorHint="#0000"
-        android:divider="@null"
-        android:listSelector="@drawable/listview_transparent_selector"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:scrollbarStyle="outsideOverlay"/>
-
-</LinearLayout>
+    android:cacheColorHint="#0000"
+    android:divider="@null"
+    android:listSelector="@drawable/listview_transparent_selector"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
+    android:scrollbarStyle="outsideOverlay"/>
