--- a/res/layout/l_dirty_comment.xml
+++ b/res/layout/l_dirty_comment.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <com.shaubert.util.FixedSizeImageView
+        <com.shaubert.widget.FixedSizeImageView
             android:id="@+id/image"
             android:layout_width="128dp"
             android:layout_height="128dp"
