--- a/res/xml/main_prefs.xml
+++ b/res/xml/main_prefs.xml
@@ -15,7 +15,7 @@
         android:summaryOn="@string/petr_turned_on"
         android:title="@string/petr_pref_title" />
 
-    <com.shaubert.util.ListPreferenceWithAutoSummary
+    <com.shaubert.widget.ListPreferenceWithAutoSummary
         android:defaultValue="14"
         android:dialogTitle="@string/font_size_dialog_title"
         android:entries="@array/font_size_labes"
