--- a/res/xml/old_prefs.xml
+++ b/res/xml/old_prefs.xml
@@ -16,7 +16,7 @@
             android:summaryOn="@string/petr_turned_on"
             android:title="@string/petr_pref_title" />
 
-        <com.shaubert.util.ListPreferenceWithAutoSummary
+        <com.shaubert.widget.ListPreferenceWithAutoSummary
             android:defaultValue="14"
             android:dialogTitle="@string/font_size_dialog_title"
             android:entries="@array/font_size_labes"
@@ -46,7 +46,7 @@
             android:key="@string/posts_background_sync_key"
             android:title="@string/posts_background_sync_title" />
 
-        <com.shaubert.util.ListPreferenceWithAutoSummary
+        <com.shaubert.widget.ListPreferenceWithAutoSummary
             android:defaultValue="86400000"
             android:dependency="@string/posts_background_sync_key"
             android:dialogTitle="@string/background_sync_period_dialog_title"
