--- a/res/xml/sync_prefs.xml
+++ b/res/xml/sync_prefs.xml
@@ -6,7 +6,7 @@
         android:key="@string/posts_background_sync_key"
         android:title="@string/posts_background_sync_title" />
 
-    <com.shaubert.util.ListPreferenceWithAutoSummary
+    <com.shaubert.widget.ListPreferenceWithAutoSummary
         android:defaultValue="86400000"
         android:dialogTitle="@string/background_sync_period_dialog_title"
         android:entries="@array/sync_time_labes"
