--- a/res/layout/l_dirty_base_activity.xml
+++ b/res/layout/l_dirty_base_activity.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical"
         android:visibility="gone">
 
-        <ImageView
+        <com.shaubert.widget.GertrudaImageView
             android:id="@+id/gertruda"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
