--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <style name="System" parent="@android:style/Theme.Light">
+        <item name="selectableItemBackground">@android:drawable/list_selector_background</item>
     </style>
 
     <style name="DirtyTheme" parent="System">
