--- a/res/layout/l_dirty_post.xml
+++ b/res/layout/l_dirty_post.xml
@@ -29,15 +29,32 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:gravity="center">
 
-            <Button
-                android:id="@+id/load_refresh_comments"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:focusable="false"
-                android:text="@string/load_comments"
-                android:textSize="13dp"/>
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/load_refresh_comments"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:focusable="false"
+                    android:text="@string/load_comments"
+                    android:textSize="13dp"/>
+
+                <ProgressBar
+                    android:id="@+id/comments_loading_progress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignTop="@id/load_refresh_comments"
+                    android:layout_alignBottom="@id/load_refresh_comments"
+                    android:layout_centerHorizontal="true"
+                    android:visibility="invisible"/>
+            </RelativeLayout>
+
 
             <ImageButton
                 android:id="@+id/favorite_button"
