--- a/res/xml/main_prefs.xml
+++ b/res/xml/main_prefs.xml
@@ -2,18 +2,9 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <CheckBoxPreference
-        android:defaultValue="false"
-        android:key="@string/main_page_show_all_key"
-        android:summaryOn="@string/main_page_show_all_descr_on"
-        android:summaryOff="@string/main_page_show_all_descr_off"
-        android:title="@string/main_page_show_all_title" />
-
-    <CheckBoxPreference
-        android:defaultValue="false"
-        android:key="@string/petr_pref_key"
-        android:summaryOff="@string/petr_turned_off"
-        android:summaryOn="@string/petr_turned_on"
-        android:title="@string/petr_pref_title" />
+        android:defaultValue="true"
+        android:key="@string/use_serif_font_family_key"
+        android:title="@string/use_serif_font_family_title" />
 
     <com.shaubert.widget.ListPreferenceWithAutoSummary
         android:defaultValue="14"
@@ -23,6 +14,13 @@
         android:key="@string/font_size_pref_key"
         android:summary="%s"
         android:title="@string/font_size_pref_title" />
+
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="@string/main_page_show_all_key"
+        android:summaryOn="@string/main_page_show_all_descr_on"
+        android:summaryOff="@string/main_page_show_all_descr_off"
+        android:title="@string/main_page_show_all_title" />
 
     <CheckBoxPreference
         android:defaultValue="true"
@@ -38,4 +36,10 @@
         android:summaryOn="@string/use_crouron_on_summary"
         android:title="@string/use_crouron_title" />
 
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="@string/petr_pref_key"
+        android:summaryOff="@string/petr_turned_off"
+        android:summaryOn="@string/petr_turned_on"
+        android:title="@string/petr_pref_title" />
 </PreferenceScreen>
