--- a/res/xml/old_prefs.xml
+++ b/res/xml/old_prefs.xml
@@ -2,19 +2,11 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <PreferenceCategory android:title="@string/main_setting_header_title" >
-        <CheckBoxPreference
-            android:defaultValue="false"
-            android:key="@string/main_page_show_all_key"
-            android:summaryOn="@string/main_page_show_all_descr_on"
-            android:summaryOff="@string/main_page_show_all_descr_off"
-            android:title="@string/main_page_show_all_title" />
 
         <CheckBoxPreference
-            android:defaultValue="false"
-            android:key="@string/petr_pref_key"
-            android:summaryOff="@string/petr_turned_off"
-            android:summaryOn="@string/petr_turned_on"
-            android:title="@string/petr_pref_title" />
+            android:defaultValue="true"
+            android:key="@string/use_serif_font_family_key"
+            android:title="@string/use_serif_font_family_title" />
 
         <com.shaubert.widget.ListPreferenceWithAutoSummary
             android:defaultValue="14"
@@ -24,7 +16,15 @@
             android:key="@string/font_size_pref_key"
             android:summary="%s"
             android:title="@string/font_size_pref_title" />
-        
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="@string/main_page_show_all_key"
+            android:summaryOn="@string/main_page_show_all_descr_on"
+            android:summaryOff="@string/main_page_show_all_descr_off"
+            android:title="@string/main_page_show_all_title" />
+
+
 	    <CheckBoxPreference
 	        android:defaultValue="true"
 	        android:key="@string/load_images_only_with_wifi_key"
@@ -38,8 +38,15 @@
             android:summaryOff="@string/use_crouron_off_summary"
             android:summaryOn="@string/use_crouron_on_summary"
             android:title="@string/use_crouron_title" />
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="@string/petr_pref_key"
+            android:summaryOff="@string/petr_turned_off"
+            android:summaryOn="@string/petr_turned_on"
+            android:title="@string/petr_pref_title" />
     </PreferenceCategory>
-    
+
     <PreferenceCategory android:title="@string/background_sync_setting_header_title">
         <CheckBoxPreference
             android:defaultValue="false"
